# git-scan

./: .gitignore  README.md  pyproject.toml
src/git_scan/: commit.py  datafile.py  git_scan.py
